@@ -31,10 +31,12 @@
 
 
 def inventory_rmon_stats(info):
-    inventory = []
-    for line in info:
-        inventory.append((line[0], None))
-    return inventory
+    settings = host_extra_conf_merged(g_hostname, inventory_if_rules)
+    if settings.get("rmon"):
+        inventory = []
+        for line in info:
+            inventory.append((line[0], None))
+        return inventory
 
 def check_rmon_stats(item, _no_params, info):
     bytes = { 1: 'bcast', 2: 'mcast', 3: '0-63b', 4: '64-127b', 5: '128-255b', 6: '256-511b', 7: '512-1023b', 8: '1024-1518b' }
