@@ -19,6 +19,8 @@
     * 0829 oracle_tablespaces: improved formatting of levels text in check output...
     * 0757 Linux multipath check can now use the alias instead of the UUID as item...
     * 0879 windows_tasks: output last and next run time
+    * 0881 rmon_stats: now needs to be activated via a rule in order to be inventorized...
+            NOTE: Please refer to the migration notes!
     * 0777 FIX: special agent emcvnx: did not work with security file authentication...
     * 0786 FIX: zfsget: fixed compatibility with older Solaris agents...
     * 0809 FIX: brocade_fcport: Fixed recently introduced problem with port speed detection
